fix: better spacing between elements

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,5 +16,5 @@ body {
 }
 
 main > * {
-  margin-top: var(--space-3xl);
+  margin-top: var(--space-xl-3xl);
 }
